--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,11 @@
         }
     ],
     "require": {
-        "intervention/image": "^2.5",
-        "phpmailer/phpmailer": "^6.5"
+        "intervention/image": "^2.5"
     },
     "autoload": {
         "psr-4": {
-            "Model\\": "./models",
-            "MVC\\": "./",
-            "Controllers\\": "./controllers"
+            "App\\": "./clases"
         }
     }
 }
