--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Model\\": "./models"
+            "Model\\": "./models",
+            "MVC\\": "./"
         }
     }
 }
