--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "autoload": {
         "psr-4": {
             "Model\\": "./models",
-            "MVC\\": "./"
+            "MVC\\": "./",
+            "Controllers\\": "./controllers"
         }
     }
 }
